@startuml
!theme plain

entity "User" {
  +user_id : int [PK]
  --
  #wallet_id : int [FK]
  username : varchar [Unique]
  firstname: varchar
  lastname: varchar
  email : varchar [Unique]
  is_admin : boolean
  has_connected_bank_account boolean
  password_hash : varchar
  profile_picture_location varchar
}

entity "Wallet" {
  +wallet_id : int [PK]
  --
  balance : decimal
  available_balance : decimal
}

entity "Station" {
  +station_id : int [PK]
  --
  station_name : varchar
  description: varchar
  station_address : varchar
  longitude : decimal
  latitude : decimal
  station_image_location : varchar
}

entity "BikeCategory" {
  +category_id : int [PK]
  --
  category_name : varchar
  price: float
}

entity "BikeModel" {
  +model_id : int [PK]
  --
  #category_id : int [FK]
  model_name : varchar
  price : float
}

entity "Bike" {
  +bike_id : int [PK]
  --
  #station_id : int [FK]
  #model_id : int [FK]
  #assigned_to : int [FK]
  bike_name: varchar
  is_available : boolean
  status : bike_status [Enum]
  size : int
  price : float
  bike_image_location varchar
}

entity "ParkingSpot" {
  +spot_id : int [PK]
  --
  #station_id : int [FK]
  spot_number : int
  #category_id : int [FK]
}

entity "ParkingSpotCategory" {
  +spot_id, category_id : int [PK]
  --
  #spot_id : int [FK]
  #category_id : int [FK]
}

entity "Ticket" {
  +ticket_id : int [PK]
  --
  #user_id : int [FK]
  #bike_id : int [FK]
  #model_id : int [FK]
  #category_id : int [FK]
  booked_type : booked_type [Enum]
  status : booking_status [Enum]
  booking_time : timestamp
  renting_start : timestamp
  renting_end : timestamp
  price : float
}

entity "Transaction" {
  +transaction_id : int [PK]
  --
  #ticket_id : int [FK]
  #user_id : int [FK]
  amount : decimal
  transaction_type : varchar
  timestamp : timestamp
}

entity "StationReview" {
  +review_id : int [PK]
  --
  #station_id : int [FK]
  #user_id : int [FK]
  #model_id : int [FK]
  title : varchar
  rating : int
  comment : text
  timestamp : timestamp
}

User ||--o{ Wallet : "owns"
User ||--o{ Ticket : "books"
User ||--o{ Transaction : "performs"
User ||--o{ StationReview : "writes"
Station ||--o{ Bike : "hosts"
Station ||--o{ StationReview : "receives"
Station ||--o{ ParkingSpot : "contains"
BikeCategory ||--o{ BikeModel : "includes"
BikeModel ||--o{ Bike : "includes"
BikeModel ||--o{ StationReview : "receives"
BikeCategory ||--o{ Ticket : "categorized in"
BikeModel ||--o{ Ticket : "categorized in"
Bike ||--o{ Ticket : "categorized in"
BikeCategory ||--o{ ParkingSpot : "accommodates"
ParkingSpot ||--o{ ParkingSpotCategory : "hosts"

@enduml
